add seat to live_events
